--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -67,7 +67,7 @@
 .services{
   width: 100%;
   height: 750px; 
-  background-color: aliceblue;
+  background-color: white;
   background-size: cover; 
   background-position: center; 
   display: flex;
@@ -88,6 +88,13 @@
   font-size: 18px; 
   margin: 0 25% 30px 0px;    
 }
+.services span{
+  color:rgb(116, 117, 118) ;
+}
+.Serve-Icons{
+  font-size: 50px;
+  color:rgb(141, 165, 186) ;
+}
 .container{
   display: grid;
   grid-template-columns: repeat(auto-fit,200px);
@@ -101,8 +108,6 @@
 .services-card{
   width: 100%;
   height: 55%;
-  border: rgba(128, 128, 128, 0.388) solid;
-  border-radius: 24px;
   margin: 5px;
   display: flex ;
   flex-direction: column;
@@ -118,7 +123,7 @@
 .downloadNow{
   width: 100%;
   height: 550px; 
-  background-color: #f0f0f0;
+  background-color: aliceblue;
   background-size: cover; 
   background-position: center; 
   display: flex;
