--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@ body{
     /* font-family: "IBM Plex Sans Arabic"; */
     font-size: 18px;
     direction: rtl;
+    position: relative;
 }
 a{
     text-decoration: none;
